--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -115,3 +115,11 @@
     border: 2px solid rgb(47, 184, 255); /* ホバー時に枠線の色を変更 */
   }
   
+  .input-field-button, .box-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    outline: none;
+  }
