--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -65,6 +65,15 @@
     top: 730px !important;
   }
   
+.input-field-button{
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    outline: none !important;
+  }
+
   .input-field {
     background-color: #2a2d32;
     border-radius: 40px;
@@ -129,10 +138,10 @@
     cursor: pointer;
     padding: 0;
     margin: 0;
-    outline: none;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    outline: none !important;
   }
