--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,7 +3,7 @@
     height: 1024px;
     overflow: hidden;
     position: relative;
-    width: 1440px;
+    width: 1280px;
   }
   
   .desktop .frame {
@@ -11,9 +11,9 @@
     border-radius: 40px;
     box-shadow: inset 18px 18px 36px #00000040, inset -18px -18px 36px #ffffff40;
     height: 358px;
-    left: 408px;
+    left: 350px;
     position: absolute;
-    top: 333px;
+    top: 220px;
     width: 625px;
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* 2列のグリッドを作成 */
@@ -22,7 +22,7 @@
     padding: 45px; 
     justify-content: center;  /* 横方向の中央配置 */
     align-items: center;      /* 縦方向の中央配置 */
-  }
+  }/*囲われたボックス部分*/
   
   .desktop .title {
     align-items: center;
@@ -33,9 +33,9 @@
     justify-content: center;
     left: 381px;
     position: absolute;
-    top: 168px;
+    top: 100px;
     width: 679px;
-  }
+  }/*問題文部分*/
   
   .desktop .model-s {
     color: var(--label-colordarkprimary);
@@ -50,14 +50,14 @@
     width: fit-content;
   }
   
-  .desktop .div {
+  /* .desktop .div {
     background-color: #d9d9d9;
     height: 120px;
     left: 1px;
     position: absolute;
     top: 0;
     width: 1440px;
-  }
+  }*/
   
   .desktop .input-field-instance {
     left: 713px !important;
