--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -33,7 +33,7 @@
     justify-content: center;
     left: 381px;
     position: absolute;
-    top: 100px;
+    top: 60px;
     width: 679px;
   }/*問題文部分*/
   
@@ -153,7 +153,7 @@
     left: -10px;
   }
 
-  .frame1 {
+  /* .frame1 {
     background: radial-gradient(50% 50% at 50% 50%, rgba(84, 86, 89, 0.5) 0%, rgba(35, 38, 41, 0.5) 100%);
     background-color: rgba(255, 255, 255, 1);
     border: 1.5px solid;
@@ -174,4 +174,4 @@
     width: 22px;
     background: none;
     border: none;
-  }
+  }*/
