--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -153,6 +153,20 @@
     left: -10px;
   }
 
+  .ling {
+    background: radial-gradient(50% 50% at 50% 50%, rgba(84, 86, 89, 0.5) 0%, rgba(35, 38, 41, 0.5) 100%);
+    background-color: rgba(255, 255, 255, 1);
+    border: 1.5px solid var(--Gradient-8, #2FB8FF);
+    background: radial-gradient(76.03% 76.03% at 24% 18%, rgba(84, 86, 89, 0.50) 0%, rgba(35, 38, 41, 0.50) 100%);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 40px;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    left: 38px;
+    top: 105px;
+  }
+
   /* .frame1 {
     background: radial-gradient(50% 50% at 50% 50%, rgba(84, 86, 89, 0.5) 0%, rgba(35, 38, 41, 0.5) 100%);
     background-color: rgba(255, 255, 255, 1);
