--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,3 +1,5 @@
+*{margin:0}
+*{padding:0}
 .desktop {
     background-color: #2a2d32;
     height: 1024px;
@@ -38,7 +40,7 @@
   }/*問題文部分*/
   
   .desktop .model-s {
-    color: var(--label-colordarkprimary);
+    color: white;
     font-family: "Roboto-Bold", Helvetica;
     font-size: 48px;
     font-weight: 700;
@@ -94,7 +96,7 @@
     line-height: 24px;
     position: absolute;
     text-align: center;
-    top: 13px;
+    top: 20px;
     width: 149px;
   }
   
@@ -125,6 +127,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 3px;
+    left: 30px;
   }
   
   .box:hover .rectangle {
@@ -163,8 +167,9 @@
     height: 20px;
     width: 20px;
     position: absolute;
-    left: 38px;
-    top: 105px;
+    left: 68px;
+    top: 110px;
+    pointer-events: none;
   }
 
   /* .frame1 {
