--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -117,7 +117,7 @@
     box-shadow: inset 10px 10px 20px #00000040, inset -10px -10px 20px #ffffff40;
     width: calc(100% - 4px); /* 枠線の幅を考慮 */
     height: calc(100% - 4px); /* 枠線の幅を考慮 */
-    position: absolute;
+    position: relative;
     color: #7f8493;
     font-family: "Roboto-Bold", Helvetica;
     font-size: 36px;
@@ -172,7 +172,15 @@
     top: 155px;
     pointer-events: none;
   }
-
+  .picture, .icon-check {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10%;  /* 角を丸くする */
+  }
   /* .frame1 {
     background: radial-gradient(50% 50% at 50% 50%, rgba(84, 86, 89, 0.5) 0%, rgba(35, 38, 41, 0.5) 100%);
     background-color: rgba(255, 255, 255, 1);
